--- a/bp/index.html
+++ b/bp/index.html
@@ -2,7 +2,7 @@
 <!--
 
 	battleplan <ed@irc.rizon.net>, MIT-licensed
-	https://ocv.me/bp/103/
+	https://ocv.me/bp/105/
 
 -->
 <meta charset="utf-8">
@@ -566,7 +566,7 @@ h3 {
 			><input id="trow_out" value="parser out"
 			></div>
 		
-		<input id="tsrch" class="viewctl" value="nema 10" sample="nema 10" />  <!-- c103 -->
+		<input id="tsrch" class="viewctl" value="kyuutai" sample="kyuutai" />  <!-- c105 -->
 		<div id="srchinfb" class="viewctl">
 			<span id="srchinf">
 				<!-- will contain search results info -->
@@ -629,8 +629,8 @@ h3 {
 		Dec 28,29,30,31 in 2019
 		sat sun mon tue 土 日 月 火
 	-->
-	<a href="#" id="bmenu_day1">土 / 1</a>  <!-- c103 -->
-	<a href="#" id="bmenu_day2">日 / 2</a>
+	<a href="#" id="bmenu_day1">日 / 1</a>  <!-- c105 -->
+	<a href="#" id="bmenu_day2">月 / 2</a>
 	<!--a href="#" id="bmenu_day3">月 / 3</a>
 	<a href="#" id="bmenu_day4">火 / 4</a-->
 	<a href="#" id="dbg">debug</a>
@@ -645,7 +645,7 @@ h3 {
 	<a href="#" id="bmenu_akikan">Sort by Kanji</a>
 	<a href="#" id="bmenu_akirom">Sort by Romaji</a>
 	<p>akiba / day3 mode; everything you weren't able to get during comiket</p>
-	<!-- c103 ^ -->
+	<!-- c105 ^ -->
 	<p><em>note: the list will only include entries from the current day</em></p>
 </div>
 <div id="vdl" class="modal">
@@ -757,7 +757,7 @@ h3 {
 <div id="vmaphall" class="modal">
 	<!-- 東|123|456|西 -->
 	<a href="#" class="bcancel">《 Cancel</a>
-	<a href="#" id="bmaphall_e123">東123</a>  <!-- c103 -->
+	<a href="#" id="bmaphall_e123">東123</a>  <!-- c105 -->
 	<a href="#" id="bmaphall_e456">東456</a>
 	<a href="#" id="bmaphall_e7">東7</a>
 	<a href="#" id="bmaphall_w12">西12</a>
@@ -904,8 +904,10 @@ window.onerror = function(msg, url, lineNo, columnNo, error) {
 
 // だけど僕はそのままの
 
-var NDAYS = 2;  //c103
-var DAYS = ['土', '日'];  //, '月', '火'];  //c103
+var CN = 105;
+var cCN = 'c'+CN;
+var zCN = 'z'+CN;
+var DAYS = ['日', '月'];  //, '月', '火'];  //c105
 var HALLS = ['e1','e2','e3','e4','e5','e6','e7a','e7b','w1a','w1b','w2a','w2b'];
 var WALLS = 'Aスaあめ';
 var ROWS = [  // wall first, then right-to-left
@@ -1474,7 +1476,7 @@ function load_day(day) {
 	{
 		loaded = localStorage.getItem('activeday');
 		if (loaded == null)
-			active_day = 1;  //c103
+			active_day = 2;  //c105
 		else
 			active_day = parseInt(loaded, 10);
 	}
@@ -1486,7 +1488,7 @@ function load_day(day) {
 	ebi('bmenu_day').innerHTML = '📆 Change day (now: ' + active_day + ')';
 	ebi('bmenu_dload').innerHTML = '📲 Download DB for Day ' + active_day;
 	
-	loaded = localStorage.getItem('z103day' + active_day);
+	loaded = localStorage.getItem(zCN + 'day' + active_day);
 	if (loaded == null) {
 		err_no_data(hash);
 		return false;
@@ -1533,7 +1535,7 @@ function load_day(day) {
 		open_addctx(hash);
 }
 function load_sel() {
-	loaded = localStorage.getItem('z103sel' + active_day);
+	loaded = localStorage.getItem(zCN + 'sel' + active_day);
 	if (loaded == null) {
 		dbsel = [];
 		inf([
@@ -1563,7 +1565,7 @@ function save_sel() {
 	try {
 		var jsontxt = JSON.stringify(dbsel);
 		var packed = LZString.compressToUTF16(jsontxt);
-		localStorage.setItem('z103sel' + active_day, packed);
+		localStorage.setItem(zCN + 'sel' + active_day, packed);
 	}
 	catch (ex) {
 		busted_localstore = true;
@@ -1595,7 +1597,7 @@ function put_day_db(jsontxt) {
 		if (nfail-- > 0) throw 42;
 		localStorage.removeItem('day' + active_day);
 		localStorage.removeItem('zday' + active_day);
-		localStorage.setItem('z103day' + active_day, pending_day_db);
+		localStorage.setItem(zCN + 'day' + active_day, pending_day_db);
 	}
 	catch (ex) {
 		full_localstore();
@@ -2174,10 +2176,10 @@ function gen_export() {
 	var ret = {};
 	for (var a = 1; a <= 4; a++) {
 		try {
-			var kt = localStorage.getItem('z103sel'+a);
+			var kt = localStorage.getItem(zCN+'sel'+a);
 			if (kt != null) {
 				var unpacked = LZString.decompressFromUTF16(kt);
-				ret['c103sel'+a] = JSON.parse(unpacked);
+				ret[cCN+'sel'+a] = JSON.parse(unpacked);
 			}
 		}
 		catch(ex) {
@@ -2186,10 +2188,10 @@ function gen_export() {
 	}
 	if (busted_localstore) {
 		alert('emergency export of day ' + active_day + ' in effect');
-		ret['c103sel'+active_day] = dbsel;
+		ret[cCN+'sel'+active_day] = dbsel;
 	}
 	for (var a = 1; a <= 4; a++) {
-		var k = 'c103sel' + a;
+		var k = cCN+'sel'+a;
 		if (!ret[k])
 			continue;
 
@@ -2238,8 +2240,8 @@ function import_text(txt) {
 			return;
 		}
 		for (var a = 1; a <= 4; a++) {
-			var uk = 'c103sel' + a;
-			var ck = 'z103sel' + a;
+			var uk = cCN+'sel'+a;
+			var ck = zCN+'sel'+a;
 			localStorage.removeItem(uk);
 			localStorage.removeItem(ck);
 			if (iv[uk]) {
@@ -2495,7 +2497,7 @@ function ev_trowin_input(e) {
 		// var UF = 'ＡＢＣＤＥＦＧＨＩＪＫＬＭＮＯＰＱＲＳＴＵＶＷＸＹＺ';
 		// var LF = 'ａｂｃｄｅｆｇｈｉｊｋｌｍｎｏｐｑｒｓｔｕｖｗｘｙｚ';
 		
-		var find =  //c103 has e7/lowercase-latin; use case-Sensitive
+		var find =  //c105 has e7/lowercase-latin; use case-Sensitive
 			//tl(m[1], LH+LF+UF, UH+UH+UH) +  //first glyph case-insensitive
 			tl(m[1], LF+UF, LH+UH) +  //first glyph case-Sensitive
 			tl(m[2], DF, DH) +
@@ -2641,7 +2643,7 @@ function full_localstore() {
 	var html = [];
 	for (var a = 0; a < NDAYS; a++)
 		try {
-			var k = 'z103day' + (a+1),
+			var k = zCN + 'day' + (a+1),
 				len = localStorage.getItem(k).length;
 
 			html.push('<a href="#" skey="' + k + '">day ' + (a+1) + ' (' + Math.round(len/1024) + ' KiB)</a>');
@@ -2724,7 +2726,7 @@ function show_map() {
 	
 	lol(function() { lol(function() {
 		var sz = 12, // box size; webcata uses 10
-			font1 = '24px monospace',
+			font1 = '20px monospace',
 			font2 = '8px sans-serif';
 		
 		var mainhall = active_map;
@@ -2810,26 +2812,26 @@ function show_map() {
 				continue;
 			
 			var x, y;
-			if (mainhall != '西12') {
-				ctx.beginPath();
-				ctx.moveTo(38.5 * sz, 0);
-				ctx.lineTo(38.5 * sz, 100 * sz);
-				ctx.stroke();
-				
-				ctx.beginPath();
-				ctx.moveTo(74.5 * sz, 0);
-				ctx.lineTo(74.5 * sz, 100 * sz);
-				ctx.stroke();
-			}
-			else {
+			if (mainhall == '西12') {
 				ctx.beginPath();
 				ctx.moveTo(45.5 * sz, 0);
 				ctx.lineTo(45.5 * sz, 100 * sz);
 				ctx.stroke();
 
 				ctx.beginPath();
-				ctx.moveTo(0, 30.5 * sz);
-				ctx.lineTo(100 * sz, 30.5 * sz);
+				ctx.moveTo(0, 32 * sz);
+				ctx.lineTo(100 * sz, 32 * sz);
+				ctx.stroke();
+			}
+			else if (mainhall != '東7') {
+				ctx.beginPath();
+				ctx.moveTo(38.5 * sz, 0);
+				ctx.lineTo(38.5 * sz, 100 * sz);
+				ctx.stroke();
+
+				ctx.beginPath();
+				ctx.moveTo(74.5 * sz, 0);
+				ctx.lineTo(74.5 * sz, 100 * sz);
 				ctx.stroke();
 			}
 
@@ -2837,7 +2839,7 @@ function show_map() {
 			if (maxy - miny < 26 * sz)
 				y = 11.8 * sz;
 			else if (miny < 20 * sz)
-				y = (miny + (maxy-miny)/1.9) + -sz * 0.15;  //e123,456
+				y = (miny + (maxy-miny)/1.92) + -sz * 0.15;  //e123,456
 			else
 				y = (miny + (maxy-miny)/1.82) + sz * 0.5;
 
@@ -2852,10 +2854,10 @@ function show_map() {
 				];
 			}
 
-			// c103
+			// c105
 			if (row == "Q") y -= sz * 0.1;
 			if ((HRD.w1a + HRD.w2a).indexOf(row) + 1) {
-				y = sz * 10.7;
+				y = sz * 11.6;
 				if (WALLS.indexOf(row) + 1) {
 					y = [sz * 1.3, sz * 41.5];
 					x = [sz * 47.5, sz * 89.5];
@@ -2864,7 +2866,7 @@ function show_map() {
 				}
 			}
 			if ((HRD.w1b + HRD.w2b).indexOf(row) + 1) {
-				y = sz * 53.7;
+				y = sz * 56.6;
 				if (WALLS.indexOf(row) + 1) {
 					y = sz * 50;
 					x = [sz * 47.5, sz * 89.5];
@@ -2873,14 +2875,14 @@ function show_map() {
 				}
 			}
 			if (HRD.e7a.indexOf(row) + 1) {
-				y = sz * 19.7;
+				y = sz * 19.5;
 				if (WALLS.indexOf(row) + 1) {
 					y = [sz * 3.5, sz * 54.5];
 					x = [sz * 2.5, sz * 43.5];
 				}
 			}
 			if (HRD.e7b.indexOf(row) + 1) {
-				y = sz * 48.6;
+				y = sz * 48.3;
 				if (row == "n") y = sz * 42.5;
 			}
 
@@ -3094,7 +3096,7 @@ function ev_savecan(e) {
 		a = document.createElement('a');
 	
 	a.setAttribute('href', u);
-	a.setAttribute('download', 'c103-' + active_day + active_map + '.png');
+	a.setAttribute('download', cCN + '-' + active_day + active_map + '.png');
 	a.click();
 	
 	show_map(active_map);
@@ -3526,6 +3528,7 @@ lol(function() { lol(function() {
 //ev_map_sel_hall();
 
 //active_map = '東123';
+//active_map = '東456';
 //active_map = '東7';
 //active_map = '西12';
 //setTimeout(show_map, 10);
