--- a/bp/index.html
+++ b/bp/index.html
@@ -880,6 +880,11 @@ function esc(txt) {
 	});
 }
 window.onerror = function(msg, url, lineNo, columnNo, error) {
+	url = String(url);
+
+	if (!/\.js($|\?)/.exec(url))
+		return;  // browser-internal
+
 	window.onerror = undefined;
 	var html = ['<h1>you hit a bug!</h1><p>please screenshot this error and send me a copy arigathanks gozaimuch (ed/irc.rizon.net or ed#2644)</p><p>',
 		esc(String(msg)), '</p><p>', esc(url + ' @' + lineNo + ':' + columnNo), '</p>'];
@@ -1009,7 +1014,7 @@ function sethash(v) {
 try {
 	active_row = localStorage.getItem('activerow');
 	if (active_row == null)
-		active_row = 'Ａ';
+		active_row = 'テ'; //c105
 }
 catch(ex) {
 	croak('could not read from localStorage; need this for the list of circles/booths');
